--- a/_example/receiver.toml
+++ b/_example/receiver.toml
@@ -1,7 +1,9 @@
 gateway_type = "receiver"
 listen_port = 16000
 deadline = "80ms"
-fragment_size = 1200
+fragment_size = 1202
+udp_send = "192.168.56.108:5688"
+udp_recv = "192.168.184.3:5688"
 
 [remote]
-scion_addr = "19-ffaa:1:xxx,127.0.0.1:16000"
+scion_addr = "19-ffaa:1:eba,127.0.0.1:16000"
